--- a/cam.html
+++ b/cam.html
@@ -24,7 +24,7 @@
 
     </div>
     <div class="anh1">
-        <img src="images/241468217_890645501578842_1875578606896469023_n.png" alt="anh">
+        <img src="./images/241468217_890645501578842_1875578606896469023_n.png" alt="anh">
         <ul class="in">
             <li><a href="">Sign in</a></li>      
         </ul>
@@ -39,19 +39,19 @@
     <br>
     <div class="doi">
         <div class="o1">
-                <img src="images/unnamed (1).webp" alt="logo">
+                <img src="./images/unnamed (1).webp" alt="logo">
                 <h3>Chart</h3>
                 <p>Make an objective assessment of 
                     <br> grades,capabilities and progress.</p>
         </div>
         <div class="o2">
-                <img src="images/logo2.png" alt="logo2">
+                <img src="./images/logo2.png" alt="logo2">
                 <h3>Chat</h3>
                 <p>Real-time messaging and <br>
                 discussion</p>
         </div>
         <div class="o3">
-            <img src="images/logo.png" alt="logo3">
+            <img src="./images/logo.png" alt="logo3">
             <h3>Exam</h3>
             <p>Creat an exame easily<br>
             Automatic marking exam</p>
@@ -76,7 +76,7 @@
        </div>
     </div>
     <div class="right">
-        <img src="images/241495598_892198461419660_3858078491328500889_n.png" alt="cau be">
+        <img src="./images/241495598_892198461419660_3858078491328500889_n.png" alt="cau be">
     </div>
 </div>
 <div class="follow">
@@ -84,18 +84,18 @@
     <div class="logo">
         <div class="face">
            <a href="">
-            <img  src="images/facbook1.png" alt="face">
+            <img  src="./images/facbook1.png" alt="face">
            </a>
         </div>
         <div class="twitter">
            <a href="">
-            <img  src="images/t1.png" alt="twitter">
+            <img  src="./images/t1.png" alt="twitter">
            </a>
         </div>
     </div>  
 </div>
 <div class="bot">
-    <img src="images/bot.png" alt="song">
+    <img src="./images/bot.png" alt="song">
     <div class="bottom">
         <div class="logo">
             <h1>CaM</h1>   
